# stock_analysis_tool

./: .gitignore  CLAUDE.md  LITE.md  README.md  ai_analyzer.py  all_tickers.txt  app.py  column_catalog.py  config.py  data_fetcher.py  db.py  earnings_fetcher.py  fundamental_fetcher.py  indicators.py  main.py  market_calendar.py  migrate.py  peers_fetcher.py  pyproject.toml  reporter.py  storage.py  technical_fetcher.py  tickers.txt  trigger_engine.py  vpn_switcher.py  yahooetfjson.txt  yahoojson.txt
