[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.0.0",
    "numpy>=2.4.2",
    "pandas>=2.0.0,<3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=13.0.0",
    "streamlit>=1.40.0",
    "ta>=0.11.0",
    "tabulate>=0.9.0",
    "yfinance>=1.2.0",
]
